--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
+
+    <Button
+        android:id="@+id/btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="happy"
+        android:text="樂透"
+        android:textSize="30sp" />
 
 
     <TextView
@@ -15,7 +22,6 @@
         android:layout_height="wrap_content"
         android:text="計數器"
         android:gravity="center"
-        android:textSize="30sp"
-        />
+        android:textSize="30sp" />
 
 </LinearLayout>
